--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
                 android:layout_height="wrap_content"
                 android:text="Total Balance"
                 android:textSize="16sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:textColor="@color/white"
@@ -74,6 +75,7 @@
                 android:text="Income"
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@id/income_icon"
                 app:layout_constraintTop_toTopOf="@id/income_icon"
                 android:layout_marginStart="4dp"
@@ -86,6 +88,7 @@
                 android:layout_height="wrap_content"
                 android:text="$ 2500.00"
                 android:textSize="14sp"
+                android:textStyle="bold"
                 android:textColor="@color/white"
                 app:layout_constraintTop_toBottomOf="@id/income_text"
                 app:layout_constraintStart_toEndOf="@id/income_icon"
@@ -110,6 +113,7 @@
                 android:text="Expenses"
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@id/expenses_icon"
                 app:layout_constraintTop_toTopOf="@id/expenses_icon"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -122,6 +126,7 @@
                 android:layout_height="wrap_content"
                 android:text="$ 800.00"
                 android:textSize="14sp"
+                android:textStyle="bold"
                 android:textColor="@color/white"
                 app:layout_constraintTop_toBottomOf="@id/expenses_text"
                 app:layout_constraintStart_toEndOf="@id/expenses_icon"
@@ -135,12 +140,138 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Transactions"
+        android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/card_1"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="35dp"
         android:layout_marginLeft="28dp"
-
         />
+    <TextView
+        android:id="@+id/text_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View All"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@id/text_2"
+        app:layout_constraintTop_toBottomOf="@id/card_1"
+        android:layout_marginTop="35dp"
+        android:layout_marginLeft="200dp"
+        />
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_2"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:elevation="20dp"
+        app:cardCornerRadius="40dp"
+        android:background="@color/white"
+
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+
+
+        <ImageView
+            android:id="@+id/icon_1"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:padding="8dp"
+            android:src="@drawable/fast_food_1"
+            android:background="@drawable/circle_background"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+/>
+        <TextView
+            android:id="@+id/icon_text_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Food"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/icon_1"
+            app:layout_constraintTop_toTopOf="@id/icon_1"
+            app:layout_constraintBottom_toBottomOf="@id/icon_1"
+            android:layout_marginLeft="4dp"
+            />
+            <TextView
+                android:id="@+id/icon_text_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="-$40.00"
+                android:layout_marginLeft="198dp"
+                android:textSize="14dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="@id/icon_1"
+                app:layout_constraintStart_toEndOf="@id/icon_text_1"
+                />
+            <TextView
+                android:id="@+id/icon_text_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Today"
+                android:layout_marginLeft="198dp"
+                android:textSize="14dp"
+                android:textColor="@color/black"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="@id/icon_1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/icon_text_1"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+<ImageButton
+    android:id="@+id/add_icon"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/circle_gradient"
+    android:src="@drawable/plus"
+    app:layout_constraintTop_toBottomOf="@id/card_2"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:padding="15dp"
+    android:layout_marginTop="30dp"
+    android:layout_marginBottom="30dp"
+    android:contentDescription="Add Icon"/>
+    <ImageButton
+        android:id="@+id/home_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/card_2"
+        app:layout_constraintEnd_toStartOf="@id/add_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="90dp"
+        android:background="@color/white"
+        android:src="@drawable/home"
+        />
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/card_2"
+        app:layout_constraintStart_toEndOf="@id/add_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="90dp"
+        android:src="@drawable/graph"
+        android:background="@color/white"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
