--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,7 +146,7 @@
         app:layout_constraintTop_toBottomOf="@id/card_1"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="35dp"
-        android:layout_marginLeft="28dp"
+        android:layout_marginLeft="20dp"
         />
     <TextView
         android:id="@+id/text_3"
@@ -158,89 +158,25 @@
         app:layout_constraintStart_toEndOf="@id/text_2"
         app:layout_constraintTop_toBottomOf="@id/card_1"
         android:layout_marginTop="35dp"
-        android:layout_marginLeft="200dp"
+        android:layout_marginLeft="220dp"
         />
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_2"
-        android:layout_width="match_parent"
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_2"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:elevation="20dp"
-        app:cardCornerRadius="40dp"
-        android:background="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
-        >
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
-
-
-        <ImageView
-            android:id="@+id/icon_1"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:padding="8dp"
-            android:src="@drawable/fast_food_1"
-            android:background="@drawable/circle_background"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-/>
-        <TextView
-            android:id="@+id/icon_text_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Food"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/icon_1"
-            app:layout_constraintTop_toTopOf="@id/icon_1"
-            app:layout_constraintBottom_toBottomOf="@id/icon_1"
-            android:layout_marginLeft="4dp"
-            />
-            <TextView
-                android:id="@+id/icon_text_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="-$40.00"
-                android:layout_marginLeft="198dp"
-                android:textSize="14dp"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="@id/icon_1"
-                app:layout_constraintStart_toEndOf="@id/icon_text_1"
-                />
-            <TextView
-                android:id="@+id/icon_text_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Today"
-                android:layout_marginLeft="198dp"
-                android:textSize="14dp"
-                android:textColor="@color/black"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="@id/icon_1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/icon_text_1"
-                />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.card.MaterialCardView>
-
-<ImageButton
+    <ImageButton
     android:id="@+id/add_icon"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/circle_gradient"
     android:src="@drawable/plus"
-    app:layout_constraintTop_toBottomOf="@id/card_2"
+    app:layout_constraintTop_toBottomOf="@id/recyclerview"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
@@ -248,11 +184,12 @@
     android:layout_marginTop="30dp"
     android:layout_marginBottom="30dp"
     android:contentDescription="Add Icon"/>
+
     <ImageButton
         android:id="@+id/home_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/card_2"
+        app:layout_constraintTop_toBottomOf="@id/recyclerview"
         app:layout_constraintEnd_toStartOf="@id/add_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="30dp"
@@ -262,9 +199,10 @@
         android:src="@drawable/home"
         />
     <ImageButton
+        android:id="@+id/graph"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/card_2"
+        app:layout_constraintTop_toBottomOf="@id/recyclerview"
         app:layout_constraintStart_toEndOf="@id/add_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="30dp"
