--- a/app/src/main/res/drawable/rounded_edit_text.xml
+++ b/app/src/main/res/drawable/rounded_edit_text.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#DBDFD8" />
+    <solid android:color="#B2C4F4" />
     <corners android:radius="20dp" />
     <stroke
         android:width="1dp"
