--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,8 +108,9 @@
                 android:src="@drawable/expences"
                 app:layout_constraintTop_toBottomOf="@id/input_text_1"
                 app:layout_constraintStart_toEndOf="@id/income_icon"
+                app:layout_constraintEnd_toStartOf="@id/expenses_text"
                 android:layout_marginTop="18dp"
-                android:layout_marginStart="196dp"
+                android:layout_marginStart="190dp"
                 />
 
             <TextView
@@ -136,6 +137,8 @@
                 android:textColor="@color/white"
                 app:layout_constraintTop_toBottomOf="@id/expenses_text"
                 app:layout_constraintStart_toEndOf="@id/expenses_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="18dp"
                 />
@@ -170,10 +173,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/text_2"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
     <ImageButton
