--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -140,6 +140,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="2dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginBottom="18dp"
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -166,8 +167,9 @@
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@id/text_2"
         app:layout_constraintTop_toBottomOf="@id/card_1"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="35dp"
-        android:layout_marginLeft="220dp"
+        android:layout_marginLeft="178dp"
         />
 
 
