--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -29,8 +29,7 @@
                 android:layout_width="55dp"
                 android:layout_height="55dp"
                 android:padding="8dp"
-                android:src="@drawable/fast_food_1"
-                android:background="@drawable/circle_background"
+                android:src="@drawable/fast_food"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
