--- a/app/src/main/res/drawable/circle_background.xml
+++ b/app/src/main/res/drawable/circle_background.xml
@@ -2,7 +2,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#711FD5" /> <!-- Change to your desired color -->
+    <solid android:color="#FF6202" /> <!-- Change to your desired color -->
     <size
         android:width="48dp"
         android:height="48dp"/>
