--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,8 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="40dp"
+        android:layout_height="110dp"
+        app:cardCornerRadius="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,6 @@
         android:layout_marginTop="30dp"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
-
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -44,107 +43,116 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="5dp"
                 />
 
-            <EditText
+            <TextView
                 android:id="@+id/input_text_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:hint="$ 0.00"
-                android:inputType="numberDecimal"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="20dp"
+                android:text="$ 00"
                 android:textColor="@color/white"
-                android:textSize="32sp"
+                android:textSize="36sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_1" />
-
-            <ImageView
-                android:id="@+id/income_icon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/income"
-                android:layout_marginLeft="16dp"
-                app:layout_constraintTop_toBottomOf="@id/input_text_1"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="18dp"
-                />
-
-            <TextView
-                android:id="@+id/income_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Income"
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@id/income_icon"
-                app:layout_constraintTop_toTopOf="@id/income_icon"
-                android:layout_marginStart="4dp"
-
-                />
-
-            <TextView
-                android:id="@+id/income_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$ 2500.00"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                app:layout_constraintTop_toBottomOf="@id/income_text"
-                app:layout_constraintStart_toEndOf="@id/income_icon"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="18dp"
-                />
-            <ImageView
-                android:id="@+id/expenses_icon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/expences"
-                app:layout_constraintTop_toBottomOf="@id/input_text_1"
-                app:layout_constraintStart_toEndOf="@id/income_icon"
-                app:layout_constraintEnd_toStartOf="@id/expenses_text"
-                android:layout_marginTop="18dp"
-                android:layout_marginStart="190dp"
-                />
-
-            <TextView
-                android:id="@+id/expenses_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Expenses"
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@id/expenses_icon"
-                app:layout_constraintTop_toTopOf="@id/expenses_icon"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="16dp"
-                />
-            <TextView
-                android:id="@+id/expenses_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$ 800.00"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                app:layout_constraintTop_toBottomOf="@id/expenses_text"
-                app:layout_constraintStart_toEndOf="@id/expenses_icon"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginBottom="18dp"
-                />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
+
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card_5"
+        android:layout_width="160dp"
+        android:layout_height="110dp"
+        app:layout_constraintTop_toBottomOf="@id/card_1"
+        app:layout_constraintEnd_toStartOf="@id/card_6"
+        app:layout_constraintStart_toStartOf="@id/card_1"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="2dp"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/gradient_2"
+            android:padding="18dp"
+            >
+            <TextView
+                android:id="@+id/card_5_text_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:text="Income"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:layout_marginTop="5dp"
+                />
+            <TextView
+                android:id="@+id/card_5_text_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/card_5_text_1"
+                app:layout_constraintStart_toStartOf="parent"
+                android:text="+ $20000"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:layout_marginTop="5dp"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card_6"
+        android:layout_width="160dp"
+        android:layout_height="110dp"
+        app:layout_constraintTop_toBottomOf="@id/card_1"
+        app:layout_constraintStart_toEndOf="@id/card_5"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="2dp"
+        app:layout_constraintEnd_toEndOf="@id/card_1"
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/gradient_2"
+            android:padding="18dp">
+
+            <TextView
+                android:id="@+id/card_6_text_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Expenses"
+                android:textColor="@color/white"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/card_6_text_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="- $200"
+                android:textColor="@color/white"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_6_text_1" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+
     <TextView
         android:id="@+id/text_2"
         android:layout_width="wrap_content"
@@ -153,8 +161,8 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/card_1"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/card_5"
+        app:layout_constraintStart_toStartOf="@id/card_5"
         android:layout_marginTop="35dp"
         android:layout_marginLeft="20dp"
         />
@@ -165,11 +173,10 @@
         android:text="View All"
         android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@id/text_2"
-        app:layout_constraintTop_toBottomOf="@id/card_1"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/card_6"
+        app:layout_constraintEnd_toEndOf="@id/card_6"
         android:layout_marginTop="35dp"
-        android:layout_marginLeft="170dp"
+        android:layout_marginRight="20dp"
         />
 
 
@@ -183,46 +190,31 @@
         />
 
     <ImageButton
-    android:id="@+id/add_icon"
-    android:layout_width="wrap_content"
+        android:id="@+id/add_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/circle_background"
+        android:src="@drawable/ic_add_expenses"
+        app:layout_constraintTop_toBottomOf="@id/recyclerview"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="30dp"
+        android:contentDescription="Add Icon"
+        />
+
+
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+    android:id="@+id/bottom_nav_bar"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/circle_gradient"
-    android:src="@drawable/plus"
-    app:layout_constraintTop_toBottomOf="@id/recyclerview"
+    android:background="@color/white"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    android:padding="15dp"
-    android:layout_marginTop="30dp"
-    android:layout_marginBottom="30dp"
-    android:contentDescription="Add Icon"
-        />
-
-    <ImageButton
-        android:id="@+id/home_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/recyclerview"
-        app:layout_constraintEnd_toStartOf="@id/add_icon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="90dp"
-        android:background="@color/white"
-        android:src="@drawable/home"
-        />
-    <ImageButton
-        android:id="@+id/graph"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/recyclerview"
-        app:layout_constraintStart_toEndOf="@id/add_icon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="90dp"
-        android:src="@drawable/graph"
-        android:background="@color/white"
-        />
-
+    app:menu="@menu/bottom_nav_menu"
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
