--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,18 @@
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_1" />
+
+            <Button
+                android:id="@+id/btnNewEntry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New+"
+                android:textColor="@color/white"
+                android:backgroundTint="#FF6202"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/input_text_1"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
@@ -102,7 +114,7 @@
                 app:layout_constraintTop_toBottomOf="@id/card_5_text_1"
                 app:layout_constraintStart_toStartOf="parent"
                 android:text=" $0.00"
-                android:textSize="24dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:layout_marginTop="5dp"
@@ -148,7 +160,7 @@
                 android:layout_marginTop="5dp"
                 android:text=" $0.00"
                 android:textColor="@color/white"
-                android:textSize="24dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/card_6_text_1" />
